--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: tonic-starter
-description: ""
+title: canis-theme
+description: "a modern style theme for the technology of the future"
 encoding: utf-8
 
 exclude: ["README.md", "LICENSE", "*.gem", "*.gemspec", "Gemfile.lock"]
